--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,11 @@ project(xmrig)
 option(WITH_LIBCPUID  "Use Libcpuid" ON)
 option(WITH_AEON      "CryptoNight-Lite support" ON)
 option(WITH_SUMO      "CryptoNight-Heavy support" ON)
-option(WITH_CN_PICO   "CryptoNight-Pico support" ON)
-option(WITH_CN_GPU    "CryptoNight-GPU support" ON)
 option(WITH_HTTPD     "HTTP REST API" ON)
 option(WITH_DEBUG_LOG "Enable debug log output" OFF)
 option(WITH_TLS       "Enable OpenSSL support" ON)
 option(WITH_ASM       "Enable ASM PoW implementations" ON)
 option(BUILD_STATIC   "Build static binary" OFF)
-option(ARM_TARGET     "Force use specific ARM target 8 or 7" 0)
 
 include (CheckIncludeFile)
 include (cmake/cpu.cmake)
@@ -20,18 +17,6 @@ include (cmake/cpu.cmake)
 set(HEADERS
     src/api/NetworkState.h
     src/App.h
-    src/base/io/Json.h
-    src/base/io/Watcher.h
-    src/base/kernel/interfaces/IConfigListener.h
-    src/base/kernel/interfaces/ISignalListener.h
-    src/base/kernel/interfaces/IWatcherListener.h
-    src/base/kernel/Entry.h
-    src/base/kernel/Process.h
-    src/base/kernel/Signals.h
-    src/base/net/Pool.h
-    src/base/net/Pools.h
-    src/base/tools/Arguments.h
-    src/base/tools/Handle.h
     src/base/tools/String.h
     src/common/config/CommonConfig.h
     src/common/config/ConfigLoader.h
@@ -49,6 +34,7 @@ set(HEADERS
     src/common/interfaces/ILogBackend.h
     src/common/interfaces/IStrategy.h
     src/common/interfaces/IStrategyListener.h
+    src/common/interfaces/IWatcherListener.h
     src/common/log/BasicLog.h
     src/common/log/ConsoleLog.h
     src/common/log/FileLog.h
@@ -56,6 +42,7 @@ set(HEADERS
     src/common/net/Client.h
     src/common/net/Id.h
     src/common/net/Job.h
+    src/common/net/Pool.h
     src/common/net/Storage.h
     src/common/net/strategies/FailoverStrategy.h
     src/common/net/strategies/SinglePoolStrategy.h
@@ -96,7 +83,6 @@ set(HEADERS_CRYPTO
     src/crypto/hash.h
     src/crypto/skein_port.h
     src/crypto/soft_aes.h
-    src/crypto/asm/CryptonightR_template.h
    )
 
 if (XMRIG_ARM)
@@ -108,15 +94,6 @@ endif()
 set(SOURCES
     src/api/NetworkState.cpp
     src/App.cpp
-    src/base/io/Json.cpp
-    src/base/io/Watcher.cpp
-    src/base/kernel/Entry.cpp
-    src/base/kernel/Process.cpp
-    src/base/kernel/Signals.cpp
-    src/base/net/Pool.cpp
-    src/base/net/Pools.cpp
-    src/base/tools/Arguments.cpp
-    src/base/tools/Handle.cpp
     src/base/tools/String.cpp
     src/common/config/CommonConfig.cpp
     src/common/config/ConfigLoader.cpp
@@ -130,6 +107,7 @@ set(SOURCES
     src/common/log/Log.cpp
     src/common/net/Client.cpp
     src/common/net/Job.cpp
+    src/common/net/Pool.cpp
     src/common/net/strategies/FailoverStrategy.cpp
     src/common/net/strategies/SinglePoolStrategy.cpp
     src/common/net/SubmitResult.cpp
@@ -154,14 +132,12 @@ set(SOURCES_CRYPTO
     src/crypto/c_blake256.c
     src/crypto/c_jh.c
     src/crypto/c_skein.c
-    src/crypto/CryptonightR_gen.cpp
    )
 
 if (WIN32)
     set(SOURCES_OS
         res/app.rc
         src/App_win.cpp
-        src/base/io/Json_win.cpp
         src/common/Platform_win.cpp
         src/Mem_win.cpp
         )
@@ -171,14 +147,12 @@ if (WIN32)
 elseif (APPLE)
     set(SOURCES_OS
         src/App_unix.cpp
-        src/base/io/Json_unix.cpp
         src/common/Platform_mac.cpp
         src/Mem_unix.cpp
         )
 else()
     set(SOURCES_OS
         src/App_unix.cpp
-        src/base/io/Json_unix.cpp
         src/common/Platform_unix.cpp
         src/Mem_unix.cpp
         )
@@ -225,7 +199,6 @@ endif()
 
 include(cmake/OpenSSL.cmake)
 include(cmake/asm.cmake)
-include(cmake/cn-gpu.cmake)
 
 CHECK_INCLUDE_FILE (syslog.h HAVE_SYSLOG_H)
 if (HAVE_SYSLOG_H)
@@ -243,10 +216,6 @@ endif()
 
 if (NOT WITH_IPBC)
     add_definitions(/DXMRIG_NO_IPBC)
-endif()
-
-if (NOT WITH_CN_PICO)
-    add_definitions(/DXMRIG_NO_CN_PICO)
 endif()
 
 if (WITH_HTTPD)
@@ -288,5 +257,5 @@ if (WITH_DEBUG_LOG)
     add_definitions(/DAPP_DEBUG)
 endif()
 
-add_executable(${CMAKE_PROJECT_NAME} ${HEADERS} ${SOURCES} ${SOURCES_OS} ${SOURCES_CPUID} ${HEADERS_CRYPTO} ${SOURCES_CRYPTO} ${SOURCES_SYSLOG} ${HTTPD_SOURCES} ${TLS_SOURCES} ${XMRIG_ASM_SOURCES} ${CN_GPU_SOURCES})
+add_executable(${CMAKE_PROJECT_NAME} ${HEADERS} ${SOURCES} ${SOURCES_OS} ${SOURCES_CPUID} ${HEADERS_CRYPTO} ${SOURCES_CRYPTO} ${SOURCES_SYSLOG} ${HTTPD_SOURCES} ${TLS_SOURCES} ${XMRIG_ASM_SOURCES})
 target_link_libraries(${CMAKE_PROJECT_NAME} ${XMRIG_ASM_LIBRARY} ${OPENSSL_LIBRARIES} ${UV_LIBRARIES} ${MHD_LIBRARY} ${EXTRA_LIBS} ${CPUID_LIB})
